<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catálogo Móvil</string>
    <string name="welcome">Bienvenidos al catálogo móvil de la Biblioteca Especializada de la Facultad de Ingeniería.</string>
    <string name="copyright">© Todos los derechos reservados - 2014</string>
    <string name="txt_busqueda">Escriba lo que desea buscar</string>
    <string name="btn_search">BUSCAR</string>
    <string name="btn_search_advanced">BÚSQUEDA AVANZADA</string>
    <string name="descripcion_image">Universidad Nacional Jorge Basadre Grohmann</string>

    <!-- String para templates -->
    <string name="tv_book_titulo">Sistemas de Monitoreo de Estabilidad de Taludes en Minería Superficial Toquepala</string>
    <string name="tv_book_autor">Davis,Gordon B.Olson,Margrethe H.</string>
    <string name="tv_book_lugar">Lima</string>
    <string name="tv_book_fecha">1985</string>
    <string name="tv_book_paginas">18pag.</string>
    <string name="tv_book_contenido">Unidades geológicas graficados y criterios de clasificación de Yacimientos Minerales,Principales Yacimientos de Minerales metálicos y no metálicos del Perú,Listas de yacimientos por metales y Departamentos</string>
    <string name="textViewCodigo">Código</string>
    <string name="tv_book_codigo">R/549.7/P77</string>
    <string name="tv_field_autor">Autor</string>
    <string name="tv_field_editorial">Editorial</string>
    <string name="tv_field_lugar">Lugar</string>
    <string name="tv_field_fecha">Fecha</string>
    <string name="tv_field_paginas">Páginas</string>
    <string name="tv_field_contenido">Contenido</string>
    <string name="tv_field_temas">Temas</string>
    <string name="tv_field_btnDescargar">Descargar</string>
    <!-- -->

    <string name="action_search">Buscar</string>
    <string name="action_settings">Settings</string>

    <!-- String para formulario busqueda avanzada  -->
    <string name="campo_titulo">Título</string>
    <string name="campo_autor">Autor</string>
    <string name="campo_editorial">Editorial</string>
    <string name="campo_descriptores">Tema</string>
    <string name="form_ordenar_por">Ordenar por</string>
    <string name="form_text_hint">Introduce un término</string>
    <string name="form_field_typeBooks">Buscar en:</string>
    <string name="form_field_orderby">Ordernar por:</string>
    <string name="form_field_all">Mostrar todos</string>

    <string-array name="field_typeBooks_array">
        <item>Libros</item>
        <item>Revistas</item>
        <item>Multimedia</item>
        <item>Trabajos, informes, tesis, etc.</item>
    </string-array>

    <string-array name="field_orderby_array">
        <item>Autor</item>
        <item>Título</item>
        <item>Año</item>
    </string-array>

</resources>
