<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_book_titulo"
        android:textColor="@color/black_900"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/tv_book_titulo"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewCodigo"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_book_titulo"
        android:text="@string/textViewCodigo"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewCodigo"
        android:layout_alignTop="@+id/textViewCodigo"
        android:textSize="16sp"
        android:text="@string/tv_book_codigo" />

    <TextView
        android:id="@+id/textViewAutor"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCodigo"
        android:text="@string/tv_field_autor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewAutor"
        android:layout_alignTop="@+id/textViewAutor"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/fontSize"
        android:textColor="@color/blue_500" />

    <TextView
        android:id="@+id/textViewEditorial"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_book_autor"
        android:text="@string/tv_field_editorial"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_editorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/fontSize"
        android:textColor="@color/blue_500"
        android:layout_toRightOf="@+id/textViewEditorial"
        android:layout_alignTop="@+id/textViewEditorial" />

    <TextView
        android:id="@+id/textViewCiudad"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_book_editorial"
        android:text="@string/tv_field_lugar"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewCiudad"
        android:layout_alignTop="@+id/textViewCiudad"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/fontSize"
        android:text="@string/tv_book_lugar" />

    <TextView
        android:id="@+id/textViewAnio"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCiudad"
        android:text="@string/tv_field_fecha"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_anio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewAnio"
        android:layout_alignTop="@+id/textViewAnio"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/fontSize"
        android:text="@string/tv_book_fecha" />

    <TextView
        android:id="@+id/textViewPaginas"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAnio"
        android:text="@string/tv_field_paginas"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_paginas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewPaginas"
        android:layout_alignTop="@+id/textViewPaginas"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/fontSize"
        android:text="@string/tv_book_paginas" />


    <TextView
        android:id="@+id/textViewContenido"
        android:textColor="@color/black_900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPaginas"
        android:textStyle="bold"
        android:text="@string/tv_field_contenido" />

    <TextView
        android:id="@+id/tv_book_contenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_below="@+id/textViewContenido"
        android:text="@string/tv_book_contenido" />

    <TextView
        android:id="@+id/textViewTemas"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_book_contenido"
        android:text="@string/tv_field_temas"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_temas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewTemas"
        android:layout_alignTop="@+id/textViewTemas"
        android:textColor="@color/blue_500"
        android:textSize="@dimen/fontSize" />

</RelativeLayout>