<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vanessapr.appbibliotecafain.FormSearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvFormTitulo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/campo_titulo" />

        <EditText
            android:id="@+id/txtFormTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_text_hint"
            android:layout_toRightOf="@+id/tvFormTitulo" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvFormAutor"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/tvFormTitulo"
            android:textStyle="bold"
            android:text="@string/campo_autor" />

        <EditText
            android:id="@+id/txtFormAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_text_hint"
            android:layout_alignTop="@+id/tvFormAutor"
            android:layout_alignLeft="@+id/txtFormTitulo"
            android:layout_alignStart="@+id/txtFormTitulo" />

        <TextView
            android:id="@+id/tvFormDescriptores"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFormAutor"
            android:textStyle="bold"
            android:text="@string/campo_descriptores" />

        <EditText
            android:id="@+id/txtDescriptores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_text_hint"
            android:layout_alignTop="@+id/tvFormDescriptores"
            android:layout_alignLeft="@+id/txtFormAutor"
            android:layout_alignStart="@+id/txtFormAutor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/txtDescriptores"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_field_typeBooks"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/tvBuscarEn" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/form_field_typeBooks"
            android:id="@+id/sp_type_books"
            android:layout_alignTop="@+id/tvBuscarEn"
            android:layout_alignLeft="@+id/sp_orderby" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/tvBuscarEn"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/form_field_orderby"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/tvOrderBy" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/form_field_orderby"
            android:id="@+id/sp_orderby"
            android:layout_alignTop="@+id/tvOrderBy"
            android:layout_toRightOf="@+id/tvOrderBy" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/form_field_all"
            android:id="@+id/chAll"
            android:layout_below="@+id/sp_orderby" />

        <Button
            android:id="@+id/btnFormSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:layout_below="@id/chAll"/>

    </RelativeLayout>
</ScrollView>
