<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_book_titulo"
        android:textColor="@color/black_900"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/tv_book_titulo"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewCodigo"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_book_titulo"
        android:text="@string/textViewCodigo"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewCodigo"
        android:layout_alignTop="@+id/textViewCodigo"
        android:textSize="16dp"
        android:text="@string/tv_book_codigo" />

    <TextView
        android:id="@+id/textViewAutor"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCodigo"
        android:text="Autor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_autor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewAutor"
        android:layout_alignTop="@+id/textViewAutor"
        android:text="Davis,Gordon B.Olson,Margrethe H." />

    <TextView
        android:id="@+id/textViewEditorial"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAutor"
        android:text="Editorial"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_editorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewEditorial"
        android:layout_alignTop="@+id/textViewEditorial"
        android:text="s.e." />

    <TextView
        android:id="@+id/textViewCiudad"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEditorial"
        android:text="Lugar "
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewCiudad"
        android:layout_alignTop="@+id/textViewCiudad"
        android:text="Lima" />

    <TextView
        android:id="@+id/textViewAnio"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCiudad"
        android:text="Fecha "
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_anio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewAnio"
        android:layout_alignTop="@+id/textViewAnio"
        android:text="1985" />

    <TextView
        android:id="@+id/textViewPaginas"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAnio"
        android:text="Páginas "
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_paginas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewPaginas"
        android:layout_alignTop="@+id/textViewPaginas"
        android:text="18pag." />

    <TextView
        android:id="@+id/textViewTemas"
        android:textColor="@color/black_900"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPaginas"
        android:text="Temas"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_book_temas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewTemas"
        android:layout_alignTop="@+id/textViewTemas" />

    <TextView
        android:id="@+id/textViewContenido"
        android:textColor="@color/black_900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTemas"
        android:textStyle="bold"
        android:text="Contenido " />

    <TextView
        android:id="@+id/tv_book_contenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewContenido"
        android:layout_marginBottom="30dp"
        android:text="Unidades geológicas graficados y criterios de clasificación de Yacimientos Minerales,Principales Yacimientos de Minerales metálicos y no metálicos del Perú,Listas de yacimientos por metales y Departamentos" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_book_contenido"
        android:layout_alignParentRight="true"
        android:text="Descargar"
        android:id="@+id/btnDownloadCD" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pesa 350kb"
        android:id="@+id/tv_book_size"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/btnDownloadCD"
        android:layout_toLeftOf="@+id/btnDownloadCD" />

</RelativeLayout>